2004-03-02  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (who_chunk)  Bugfix:  Reduce the
	chunk size as addresses with bounces are found.

	* lib/Mj/Archive.pm:  (_dim)  Bugfix:  Cope properly
	with leap years.  Thanks to Steven Orr.

	* lib/Mj/Format.pm:  (who)  Support the MODE substitution.

2004-02-16  Michael Yount <csf@moscow.com>

	* convertdb.pl:  Add -p (list files but don't change them)
	and -c (clean up backup databases) options.  Thanks to SRE.

2004-02-11  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceHandler.pm:  (handle_bounce_token)  Bugfix:
	Use the correct sender in inform() call.

	* lib/Mj/MailOut.pm:  (mail_entity)  Add Date and Message-ID
	headers if they are not present.
	Thanks to Richard Birkett.

2004-02-10  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_bounce_rules)
	Validate "remove" action modes.

2004-02-09  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceHandler.pm:  (handle_bounce_probe)
	Include the reasons from the token data.
	(handle_bounce_user)  Bugfix:  Only mention that
	the subscriber was removed for no probe/no consult.
	Thanks to SRE.

2004-02-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (digest)  Add missing substitutions.
	Thanks to SRE.

	* lib/Mj/Format.pm:  (createlist, set, show)  Sanitize
	lists more carefully.  Thanks to SRE.

	* lib/Mj/Inform.pm:  (_inform_owner)  Remove example.com
	from two substitutions.  Thanks to SRE.

	* lib/Mj/Util.pm:  (process_rule)  Add "or" to the list
	of Safe compartment operations.  Thanks to SRE.

2004-02-04  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Initialize variables
	sooner to avoid warnings.  Thanks to Brock Rozen.

2004-02-03  Michael Yount <csf@moscow.com>

	* convertdb.pl:  Remove parentheses in "grep" arguments.
	Thanks to SRE.

	* bin/mj_queueserv:  (in, out) Validate file handle.
	Thanks to SRE.

	* lib/Majordomo.pm:  (_make_list)  Add valid_list
	callback.
